<resources>
    <string name="app_name">Services</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="started_service_broadcase_send_data"></string>
</resources>
